[package]
name = "pnte"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.6"
serde = { version = "1.0.192", features = ["derive"], optional = true }
thiserror = "1.0.50"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Foundation_Numerics",
]

[dev-dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
wiard = "0.1.1"
