[package]
name = "pnte"
version = "0.2.1"
edition = "2021"
description = "2D Graphics library for Windows in Rust"
repository = "https://github.com/btanno/pnte"
documentation = "https://docs.rs/pnte"
license = "MIT"
readme = "README.md"
categories = ["graphics"]
keywords = ["graphics", "gui", "windows"]

[dependencies]
raw-window-handle = "0.6"
serde = { version = "1.0.197", features = ["derive"], optional = true }
thiserror = "1.0.57"

[dependencies.windows]
version = "0.53"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Foundation_Numerics",
]

[dev-dependencies]
winit = { version = "0.29.10", features = ["rwh_06"] }
wiard = "0.1.3"
anyhow = { version = "1.0.80", features = ["backtrace"] }
